Additional fixes & drying out code

--- a/index.html
+++ b/index.html
@@ -46,23 +46,21 @@
         <div class="navItem navHome">
           <a href="#intro" class="link vee">V</a>
           <a href="#intro" class="link jay">J</a>
-
           <!-- start of svg -->
           <svg version="1.1" id="svgNav" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
           <line fill="none" stroke="#FF9163" stroke-width="14" stroke-miterlimit="10" x1="500" y1="500" x2="0" y2="0"/>
           </svg>
           <!-- end of svg -->
-
-        </div>
+        </div> <!-- /.navHome -->
         <div class="navItem navAbout">
           <a href="#about" class="link">About</a>
-        </div>
+        </div> <!-- /.navAbout -->
         <div class="navItem navWork">
           <a href="#work" class="link">Work</a>
-        </div>
+        </div> <!-- /.navWork -->
         <div class="navItem navContact">
           <a href="#contact" class="link">Contact</a>
-        </div>
+        </div> <!-- /.navContact -->
       </div> <!-- /.wrapperNav -->
     </nav>
 
@@ -71,33 +69,14 @@
 
         <!-- start of large svg -->
         <svg version="1.1" id="svgIntroLg" class="svgIntro" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 1204 364" enable-background="new 0 0 1204 364" xml:space="preserve">
-
-          <!-- zigzag path -->
-          <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" vector-effect="non-scaling-stroke" d="M2,2h1200L2,302l300,60H2"/>
-          <!-- right border -->
-          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="1202" y1="362" x2="1202" y2="2"/>
-          <!-- bottom border nav -->
-          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="1202" y1="362" x2="302" y2="362"/>
-          <!-- top border nav -->
-          <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  d="M1202,302H2"/>
-          <!-- nav border right -->
-          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="902" y1="362" x2="902" y2="302"/>
-          <!-- nav border middle -->
-          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="602" y1="362" x2="602" y2="302"/>
-          <!-- nav border left -->
-          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="302" y1="362" x2="302" y2="302"/>
-          <!-- left border -->
-          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="2" y1="2" x2="2" y2="362"/>
-
-          <!-- name text -->
-          <!-- <text class="svgIntroText svgIntroText-name svgIntroText-nameFirst" transform="matrix(1 0 0 1 22 67.9702)" fill="#6EB79E" font-family="'Montserrat-Regular'" font-size="6rem">VESNA</text>
-          <text class="svgIntroText svgIntroText-name svgIntroText-nameLast" transform="matrix(1 0 0 1 988.502 282)" fill="#6EB79E" font-family="'Montserrat-Regular'" font-size="6rem">JOCIC</text> -->
-
-          <!-- nav text -->
-          <!-- <text class="svgIntroText svgIntroText-nav svgIntroText-navAbout" transform="matrix(1 0 0 1 495.5811 347.999)" fill="#4C4C4C" font-family="'Montserrat-Regular'" font-size="2.4rem"><a class="linkX" xlink:href="#about">ABOUT</a></text>
-          <text class="svgIntroText svgIntroText-nav svgIntroText-navWork" transform="matrix(1 0 0 1 803.9805 348)" fill="#4C4C4C" font-family="'Montserrat-Regular'" font-size="2.4rem"><a class="linkX" xlink:href="#work">WORK</a></text>
-          <text class="svgIntroText svgIntroText-nav svgIntroText-navContact" transform="matrix(1 0 0 1 1057.9688 347.999)" fill="#4C4C4C" font-family="'Montserrat-Regular'" font-size="2.4rem"><a class="linkX" xlink:href="#contact">CONTACT</a></text> -->
-          
+        <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" vector-effect="non-scaling-stroke" d="M2,2h1200L2,302l300,60H2"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="1202" y1="362" x2="1202" y2="2"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="1202" y1="362" x2="302" y2="362"/>
+        <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  d="M1202,302H2"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="902" y1="362" x2="902" y2="302"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="602" y1="362" x2="602" y2="302"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="302" y1="362" x2="302" y2="302"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="2" y1="2" x2="2" y2="362"/>
         </svg> 
         <!-- end of large svg -->
 
@@ -127,31 +106,28 @@
         <!-- end of small svg -->
 
         <div class="svgOverlay" style=" ">
-
           <div class="svgHeader" style=" ">
             <div class="svgHeaderText svgHeaderText-vesna">
               <h1>V<span class="esna">esna</span></h1>
-            </div>
+            </div> <!-- /.svgHeaderText-vesna -->
             <div class="svgHeaderText svgHeaderText-jocic">
               <h1>J<span class="ocic">ocic</span></h1>
-            </div>
+            </div> <!-- /.svgHeaderText-jocic -->
           </div> <!-- /.svgHeader -->
-
           <div class="svgNav" style=" ">
             <div class="svgNavItem">
               <p>&nbsp;</p>
-            </div>
+            </div> <!-- /.svgNavItem -->
             <div class="svgNavItem">
               <a href="#about" class="link">About</a>
-            </div>
+            </div> <!-- /.svgNavItem -->
             <div class="svgNavItem">
               <a href="#work" class="link">Work</a>
-            </div>
+            </div> <!-- /.svgNavItem -->
             <div class="svgNavItem">
               <a href="#contact" class="link">Contact</a>
-            </div>
+            </div> <!-- /.svgNavItem -->
           </div> <!-- /.svgNav -->
-
         </div> <!-- /.svgOverlay -->
 
       </div> <!-- /.wrapperIntro -->
@@ -168,13 +144,11 @@
           </div> <!-- /.aboutText -->
           <div class="aboutTitle">
             <h2>About</h2>
-
             <!-- start of svg -->
             <svg version="1.1" id="svgAbout" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
             <line fill="none" stroke="#D0DD41" stroke-width="4" stroke-miterlimit="10" x1="500" y1="500" x2="0" y2="0"/>
             </svg>
             <!-- end of svg -->
-
           </div> <!-- /.aboutTitle -->
         </div> <!-- /.wrapperAboutMain -->
 
@@ -243,8 +217,9 @@
 
         <div class="workText workText1">
           <h3>Pauline's Dinette</h3>
-          <p>Lorem ipsum dolor sit amet, cons ectetur adipisicing elit. Error debitis quos sapiente, atque consectetur fuga, deserunt nulla magni.</p>
-          <p>Nesciunt prae sent ium ea earum fugit deserunt nobis velit obcaecati aperiam. Mollitia sit ipsam beatae velit delorean amit.</p>
+          <p>A responsive WordPress theme for your favourite casual dining spot or local food cart/truck.</p>
+          <p>This WP theme is highly customizable, allowing users to easily update page content, navigation items, and featured images.</p>
+          <p>Custom design, developed in a pair programming environment.</p>
         </div> <!-- /.workText1 -->
 
         <div class="workTitle workTitle1">
@@ -282,7 +257,7 @@
         </div> <!-- /.workTitle1 -->
       </div> <!-- /.wrapperWork1 -->
 
-      <div class="wrapperOuter workExtraButton">
+      <div class="wrapperOuter workExtraButton hide">
         <a href="#work1">View Live</a>
       </div> <!-- /.workTitleButton -->
 
@@ -295,8 +270,9 @@
 
         <div class="workText workText2">
           <h3>Celiac Menu Planner</h3>
-          <p>Lorem ipsum dolor sit amet, cons ectetur adipisicing elit. Error debitis quos sapiente, atque consectetur fuga, deserunt nulla magni.</p>
-          <p>Nesciunt prae sent ium ea earum fugit deserunt nobis velit obcaecati aperiam. Mollitia sit ipsam beatae velit delorean amit.</p>
+          <p>This web app uses the Yummly API to help people with Celiac Disease plan a week's worth of gluten-free meals.</p>
+          <p>A unique breakfast, lunch, snack, and dinner option is generated for each day. Users can then request a new meal option or email themselves the recipe details.</p>
+          <p>Designed and developed in a pair programming environment.</p>
         </div> <!-- /.workText2 -->
 
         <div class="workTitle workTitle2">
@@ -335,7 +311,7 @@
         </div> <!-- /.workTitle2 -->
       </div> <!-- /.wrapperWork2 -->
 
-      <div class="wrapperOuter workExtraButton">
+      <div class="wrapperOuter workExtraButton hide">
         <a href="#work2">View Live</a>
       </div> <!-- /.workTitleButton -->
 
@@ -348,8 +324,8 @@
 
         <div class="workText workText3">
           <h3>Hai&amp;Bay Law Practice</h3>
-          <p>Lorem ipsum dolor sit amet, cons ectetur adipisicing elit. Error debitis quos sapiente, atque consectetur fuga, deserunt nulla magni.</p>
-          <p>Nesciunt prae sent ium ea earum fugit obcaecati aperiam. Mollitia sit ipsam beatae velit delorean amit.</p>
+          <p>A fully responsive single page site for a legal practice, developed based on a static PSD mockup.</p>
+          <p>CSS and JavaScript are used to create subtle hover states and interactive tab and accordion menus that enhance the user experience.</p>
         </div> <!-- /.workText3 -->
 
         <div class="workTitle workTitle3">
@@ -384,7 +360,7 @@
         </div> <!-- /.workTitle3 -->
       </div> <!-- /.wrapperWork3 -->
 
-      <div class="wrapperOuter workExtraButton">
+      <div class="wrapperOuter workExtraButton hide">
         <a href="#work3">View Live</a>
       </div> <!-- /.workTitleButton -->
 
@@ -392,16 +368,13 @@
 
     <section id="contact" class="sectionContact">
       <div class="wrapperOuter wrapperContact hide">
-
         <div class="contactTitle">
           <h2>Contact</h2>
-
           <!-- start of svg -->
           <svg version="1.1" id="svgContact" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
           <line fill="none" stroke="#D0DD41" stroke-width="6" stroke-miterlimit="10" x1="0" y1="500" x2="500" y2="0"/>
           </svg>
           <!-- end of svg -->
-
         </div> <!-- /.contactTitle -->
         <div class="contactText">
           <p>Interested in discussing future projects? Curious to know more about how I can contribute to your team? Or just looking to say hello? Feel free to reach out through any (or all) channels!</p>
@@ -429,7 +402,6 @@
             <div class="contactItemBg"></div>
           </div> <!-- /.contactItems3 -->
         </div> <!-- /.contactItems -->
-
       </div> <!-- /.wrapperContact -->
     </section> <!-- /.sectionContact-->
 
