Adding project images & links

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <div id="work1" class="wrapperOuter wrapperWork wrapperWorkOdd wrapperWork1 hide">
         <div class="workImg workImg1">
           <figure>
-            <img src="images/frame-laptop.png" alt="Image of laptop screen and mobile phone screen showing responsive design for Pauline's Dinette website">
+            <img src="images/screens-paulines.png" alt="Image of laptop screen and mobile phone screen showing responsive design for Pauline's Dinette website">
           </figure>
         </div> <!-- /.workImg1 -->
 
@@ -219,7 +219,7 @@
           <h3>Pauline's Dinette</h3>
           <p>A responsive WordPress theme for your favourite casual dining spot or local food cart/truck.</p>
           <p>This WP theme is highly customizable, allowing users to easily update page content, navigation items, and featured images.</p>
-          <p>Custom design, developed in a pair programming environment.</p>
+          <p>Designed by me, developed in a pair programming environment.</p>
         </div> <!-- /.workText1 -->
 
         <div class="workTitle workTitle1">
@@ -250,7 +250,7 @@
               </ul>
             </div> <!-- /.workTitleSkills -->
             <div class="workTitleItem workTitleButton">
-              <a href="#work1">View Live</a>
+              <a href="http://www.vesnajocic.com/projects/paulines" target="blank">View Live</a>
             </div> <!-- /.workTitleButton -->
           </div> <!-- /.workTitleSub -->
 
@@ -258,13 +258,13 @@
       </div> <!-- /.wrapperWork1 -->
 
       <div class="wrapperOuter workExtraButton hide">
-        <a href="#work1">View Live</a>
+        <a href="http://www.vesnajocic.com/projects/paulines" target="blank">View Live</a>
       </div> <!-- /.workTitleButton -->
 
       <div id="work2" class="wrapperOuter wrapperWork wrapperWorkEven wrapperWork2 hide">
         <div class="workImg workImg2">
           <figure>
-            <img src="images/frame-laptop.png" alt="Image of laptop screen and mobile phone screen showing responsive design for the Celiac Menu Planner website">
+            <img src="images/screens-celiac.png" alt="Image of laptop screen and mobile phone screen showing responsive design for the Celiac Menu Planner website">
           </figure>
         </div> <!-- /.workImg2 -->
 
@@ -304,7 +304,7 @@
               </ul>
             </div> <!-- /.workTitleSkills -->
             <div class="workTitleItem workTitleButton">
-              <a href="#work2">View Live</a>
+              <a href="http://www.vesnajocic.com/projects/celiac" target="blank">View Live</a>
             </div> <!-- /.workTitleButton -->
           </div> <!-- /.workTitleSub -->
 
@@ -312,20 +312,20 @@
       </div> <!-- /.wrapperWork2 -->
 
       <div class="wrapperOuter workExtraButton hide">
-        <a href="#work2">View Live</a>
+        <a href="http://www.vesnajocic.com/projects/celiac" target="blank">View Live</a>
       </div> <!-- /.workTitleButton -->
 
       <div id="work3" class="wrapperOuter wrapperWork wrapperWorkOdd wrapperWork3 hide">
         <div class="workImg workImg3">
           <figure>
-            <img src="images/frame-laptop.png" alt="Image of laptop screen and mobile phone screen showing responsive design for the Hai&amp;Bay Law Practice website">
+            <img src="images/screens-lawyer.png" alt="Image of laptop screen and mobile phone screen showing responsive design for the Hai&amp;Bay Law Practice website">
           </figure>
         </div> <!-- /.workImg3 -->
 
         <div class="workText workText3">
           <h3>Hai&amp;Bay Law Practice</h3>
           <p>A fully responsive single page site for a legal practice, developed based on a static PSD mockup.</p>
-          <p>CSS and JavaScript are used to create subtle hover states and interactive tab and accordion menus that enhance the user experience.</p>
+          <p>This site employs CSS and JavaScript to create subtle hover states and interactive tab and accordion menus that enhance the user experience.</p>
         </div> <!-- /.workText3 -->
 
         <div class="workTitle workTitle3">
@@ -353,7 +353,7 @@
               </ul>
             </div> <!-- /.workTitleSkills -->
             <div class="workTitleItem workTitleButton">
-              <a href="#work3">View Live</a>
+              <a href="http://www.vesnajocic.com/projects/lawyer" target="blank">View Live</a>
             </div> <!-- /.workTitleButton -->
           </div> <!-- /.workTitleSub -->
 
@@ -361,7 +361,7 @@
       </div> <!-- /.wrapperWork3 -->
 
       <div class="wrapperOuter workExtraButton hide">
-        <a href="#work3">View Live</a>
+        <a href="http://www.vesnajocic.com/projects/lawyer" target="blank">View Live</a>
       </div> <!-- /.workTitleButton -->
 
     </section> <!-- /.sectionWork -->
